# CXXBLACS

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cxxblacs.h  cxxblacs.hpp
cmake/: CXXBLACSConfig.cmake.in  HandleGTest.cmake
cxxblacs/: blacs.hpp  blacs_print.h  blacs_wrappers.h  blacsgrid.hpp  blacsgrid_misc.h  config.hpp  lapack.hpp  misc.hpp  mpi.hpp  mpi_exec.h  proto.hpp  scalapack.hpp
cxxblacs/blacs/: collective.hpp  gridmanip.hpp  pointtopoint.hpp
examples/API/: distribute.cxx
include/: blacs_gather_distribute.h  blacs_print.h  blacs_wrappers.h  blacsgrid_misc.h  cxxblacs.h  cxxblacs.hpp  global_local_conv.h  mpi_exec.h
include/cxxblacs/: blacsgrid.hpp  lapack.hpp  misc.hpp  proto.hpp  scalapack.hpp
include/cxxblacs/blacs/: gridmanip.hpp  pointtopoint.hpp
tests/: CMakeLists.txt  ut.cxx  ut.hpp
tests/redistribute/: CMakeLists.txt  redistribute.cxx
tests/scalapack/: CMakeLists.txt  chol.cxx  eig.cxx  pgemm.cxx  ptrmm.cxx  scalapack_ut.hpp  solve.cxx
tests/scatter_gather/: CMakeLists.txt  gather.cxx  scatter.cxx  scatter_gather.hpp
